--- a/config/server.properties
+++ b/config/server.properties
@@ -136,7 +136,7 @@ zookeeper.connection.timeout.ms=18000
 group.initial.rebalance.delay.ms=0
 
 ########### SECURITY using SCRAM-SHA-512 and SSL ###################
-listeners=PLAINTEXT://localhost:9092,SASL_PLAINTEXT://localhost:9093,SASL_SSL://localhost:9094
+listeners=PLAINTEXT://:9092,SASL_PLAINTEXT://:9093,SASL_SSL://:9094
 advertised.listeners=PLAINTEXT://localhost:9092,SASL_PLAINTEXT://localhost:9093,SASL_SSL://localhost:9094
 security.inter.broker.protocol=SASL_SSL
 ssl.endpoint.identification.algorithm=
