--- a/config/server.properties
+++ b/config/server.properties
@@ -137,7 +137,7 @@ group.initial.rebalance.delay.ms=0
 
 ########### SECURITY using SCRAM-SHA-512 and SSL ###################
 listeners=PLAINTEXT://:9092,SASL_PLAINTEXT://:9093,SASL_SSL://:9094
-advertised.listeners=PLAINTEXT://localhost:9092,SASL_PLAINTEXT://localhost:9093,SASL_SSL://localhost:9094
+advertised.listeners=PLAINTEXT://localhost:9092,SASL_PLAINTEXT://kafka0:9093,SASL_SSL://localhost:9094
 security.inter.broker.protocol=SASL_SSL
 ssl.endpoint.identification.algorithm=
 ssl.client.auth=required
